soundcloud: fix min-width/cutoff, halve artwork quality, mobile min-width override

--- a/apps/soundcloud/soundcloud.css
+++ b/apps/soundcloud/soundcloud.css
@@ -1,8 +1,8 @@
 #scWindow {
     width: 520px;
     height: 580px;
-    min-width: 460px;
-    min-height: 500px;
+    min-width: 300px;
+    min-height: 400px;
 }
 
 #scBody {
